fix spacing issues

--- a/css/index.css
+++ b/css/index.css
@@ -197,7 +197,7 @@ header .logo {
   height: 27.8vw;
 }
 .cta .cta-text {
-  font-size: calc(30px + 3.07vw);
+  font-size: calc(16px + 4.15vw);
   text-align: center;
   letter-spacing: 5px;
   display: flex;
@@ -211,7 +211,7 @@ header .logo {
   font-size: calc(12px + 0.293vw);
   background: white;
   width: calc(85px + 6.22vw);
-  height: 2.67em;
+  height: 2em;
   margin-top: 10px;
   cursor: pointer;
 }
