--- a/less/cta.less
+++ b/less/cta.less
@@ -11,7 +11,7 @@
     }
 
     .cta-text {
-        font-size: 5.27vw;
+        font-size: calc(16px + 4.15vw);
         text-align: center;
         letter-spacing: 5px;
         display: flex;
@@ -26,7 +26,7 @@
         font-size: calc(12px + 0.293vw);
         background: white;
         width: calc(85px + 6.22vw);
-        height: 2.67em;
+        height: 2em;
         margin-top: 10px;
         cursor: pointer;
 
